--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <main>
-    <h1 id="header">אleph</h1>
-    <p id="section">adsf</p>
+    <h1 id="header">א Aleph</h1>
+    <p id="section">Blessed are the undefiled in the way, who walk in the law of the Lord. Blessed are they that keep his testimonies, and that seek him with the whole heart. They also do no iniquity: they walk in his ways. Thou hast commanded us to keep thy precepts diligently. O that my ways were directed to keep thy statutes! Then shall I not be ashamed, when I have respect unto all thy commandments. I will praise thee with uprightness of heart, when I shall have learned thy righteous judgments. I will keep thy statutes: O forsake me not utterly.</p>
     <small><a id="context" href="" target="_blank">Psalm 119:1-8 in context</a></small>
     <noscript>
       <br>
