--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="description" content="A daily dose of Psalm 119"/>
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json"/>
   <meta name="color-scheme" content="dark light">
 </head>
 <body>
