Make heart at bottom of page filled and colored

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <footer>
     <small><a href="https://github.com/JonathanBuchh/119#readme" target="_blank">What is this?</a></small>
     <hr>
-    <small>Made with ♡ by <a href="https://buchh.org" target="_blank">Jonathan Buchholz</a></small>
+    <small>Made with <span id="heart">♥</span> by <a href="https://buchh.org" target="_blank">Jonathan Buchholz</a></small>
   </footer>
 </body>
 <script src="script.js"></script>
